pull reference files

--- a/scripts/dist_model-tumor.ipynb
+++ b/scripts/dist_model-tumor.ipynb
@@ -17,6 +17,8 @@
     "import statistics\n",
     "import scipy.stats as stats\n",
     "import json\n",
+    "from collections import Counter\n",
+    "\n",
     "#######\n",
     "cancer = 'PAAD'\n",
     "run = 'HCMITumorModel'\n",
@@ -72,40 +74,10 @@
     "    return df\n",
     "\n",
     "\n",
-    "def intersection(lst1, lst2):\n",
-    "    lst3 = [v for v in lst1 if v in lst2]\n",
-    "    return lst3\n",
+    "def intersection(list1, list2):\n",
+    "    overlap = [a for a in list1 if a in list2]\n",
+    "    return overlap\n",
     "\n",
-    "\n",
-    "# def normalize_data(DATA, WHERE_GENE):\n",
-    "#     '''input DATA dataframe and if WHERE_GENE are found in \"row\" or \"col\" \n",
-    "#     normalizes by divide each gexp_value by sum of all gexp vales then *1,000\n",
-    "#     '''\n",
-    "#     results = {}\n",
-    "#     # Normalize across WHERE_GENE for each sample\n",
-    "#     if WHERE_GENE == 'col':\n",
-    "#         for sample in DATA.index:\n",
-    "#             gexp = DATA.loc[sample,]\n",
-    "#             # divide each gexp_value by sum of all gexp vales then *1,000\n",
-    "#             total_sum = sum(gexp)\n",
-    "#             normalized_gexp = [(g/total_sum)*1000 for g in gexp]\n",
-    "#             # save\n",
-    "#             assert sample not in results, 'repeated sample names. can not have in python dictionary'\n",
-    "#             results[sample]=normalized_gexp\n",
-    "#             normalized_matrix = pd.DataFrame.from_dict(results).transpose()\n",
-    "#             normalized_matrix.columns = DATA.columns\n",
-    "#     elif WHERE_GENE == 'row':\n",
-    "#         for sample in DATA.columns:\n",
-    "#             gexp = DATA[sample]\n",
-    "#             # divide each gexp_value by sum of all gexp vales then *1,000\n",
-    "#             total_sum = sum(gexp)\n",
-    "#             normalized_gexp = [(g/total_sum)*1000 for g in gexp]\n",
-    "#             # save\n",
-    "#             assert sample not in results, 'repeated sample names. can not have in python dictionary'\n",
-    "#             results[sample]=normalized_gexp\n",
-    "#             normalized_matrix = pd.DataFrame.from_dict(results)\n",
-    "#             normalized_matrix.index = DATA.index\n",
-    "#     return normalized_matrix\n",
     "\n",
     "\n",
     "def get_euclidean(metric, v1, v2):\n",
@@ -162,29 +134,6 @@
     "genes_keep = intersection( genes_keep, combined_top_fts)\n",
     "model_df = model_df[genes_keep]\n",
     "tumor_df = tumor_df[genes_keep]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a61d328",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # normalize data\n",
-    "# model_df= normalize_data(model_df, 'col')\n",
-    "# tumor_df= normalize_data(tumor_df, 'col')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba74de3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(model_df.shape)\n",
-    "print(tumor_df.shape)"
    ]
   },
   {
@@ -273,11 +222,8 @@
     "### ex. What is the distance between PAAD_tumor_1 and the PAAD_model_1 ? ###\n",
     "\n",
     "# Create look up matches of model and cancer model\n",
-    "## New FINAL\n",
     "file = '../src/distance_metric/HCMI_AWG_Model-Tumor-Normal_Linkage_v2.0_2.20.2024.txt'\n",
-    "# file = '../src/distance_metric/HCMI_AWG_Model-Tumor-Normal_Linkage_v2.0_10.27.2023.txt'\n",
     "ref = pd.read_csv(file, sep='\\t')\n",
-    "# ref.index = list(ref['Matched Tumor Aliquot'])\n",
     "\n",
     "# note some tumors match to multiple models\n",
     "tumor2model = ref[['Matched Tumor Aliquot', 'Cancer Model Aliquot']]\n",
@@ -294,23 +240,12 @@
     "# tweak based on mushriqs missing file \n",
     "# add any pairs that are missing\n",
     "mdf = pd.read_csv('../data/distance_metric/src/missing_ohsu_euclidean_distance_all.02.12.2024.csv', sep=',')\n",
-    "# mdf = pd.read_csv('../data/distance_metric/src/missing_ohsu_single_sheet.csv', sep=',')\n",
-    "longform = {\n",
-    "    'BLCA':['Bladder Cancer'],\n",
-    "    'BRCA':['Breast Cancer','Intraductal Carcinoma'],\n",
-    "    'COADREAD': ['Colorectal Cancer', 'Rare Cancer','Serrated Adenoma','Tubular Adenoma','Tubulovilluos Adenoma'],\n",
-    "    'ESO': ['Esophageal Cancer','Stomach Cancer'],\n",
-    "    'HNSC':['Head and Neck'], # ?? need to check if can find this wording in analysis tracker\n",
-    "    'KIRCKICH':['Kidney Cancer'],\n",
-    "    'LGGGBM':['Glioblastoma'],\n",
-    "    'LIHCCHOL':['Extrahepatic Cholangiocarcinoma','Ampulla of Vater','Hepatocellular carcinoma','Intrahepatic Cholangiocarcinoma'],\n",
-    "    'LUNG':['Lung Cancer'],\n",
-    "    'OV':['Ovarian Cancer'],\n",
-    "    'PAAD': ['Pancreatic Cancer'],\n",
-    "    'SARC': ['Bone Cancer','Clear Cell Sarcoma','Desmoid Tumors','Epithelial Sarcoma','Ewing Sarcoma','Intimal Sarcoma','Leiomyosarcoma','Rhabdomyosarcoma','Spindle Cell Sarcoma','Undifferentiated Pleomorphic Sarcoma'],\n",
-    "    'SKCM':['Melanoma'], \n",
-    "    'UCEC':['Endometrial Cancer'],\n",
-    "}\n",
+    "\n",
+    "# Create abbrev to full cancer cohort dict\n",
+    "with open('../src/full_cancers.json', 'r') as fh:\n",
+    "    for line in fh:\n",
+    "        longform = json.loads(line)\n",
+    "        \n",
     "mdf= mdf[mdf['cancer_type'].isin(longform[cancer])]\n",
     "mdf = mdf[['matched_tumor_aliquot', 'aliquot_id3', ]].reset_index(drop=True)\n",
     "mdf.columns = ['Matched Tumor Aliquot','Cancer Model Aliquot']"
@@ -332,12 +267,10 @@
     "    mdf_model = mdf['Cancer Model Aliquot'][i]\n",
     "    # if tumor not in tracker, then add it\n",
     "    if mdf_tumor not in list(tumor2model['Matched Tumor Aliquot']):\n",
-    "        #print('adding a completely new tumor (and the model pair)')\n",
     "        new['Matched Tumor Aliquot'].append(mdf_tumor)\n",
     "        new['Cancer Model Aliquot'].append(mdf_model)\n",
     "    # if tumor has a different model match, then add it\n",
     "    elif list(tumor2model[tumor2model['Matched Tumor Aliquot']==mdf_tumor]['Cancer Model Aliquot'])[0] != mdf_model:\n",
-    "        #print('adding a new tumor-model pair even tho tumor already in list')\n",
     "        new['Matched Tumor Aliquot'].append(mdf_tumor)\n",
     "        new['Cancer Model Aliquot'].append(mdf_model)\n",
     "new_df = pd.DataFrame.from_dict(new)\n",
@@ -375,92 +308,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "missing-armor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create tumor-model mappings that need to be forced  \n",
+    "with open('../src/extra_tumor_model_pairs.json', 'r') as fh:\n",
+    "    for line in fh:\n",
+    "        manual_matches = json.loads(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "db273508",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# manually update as per v2 Mushriq missing file (4 total samples)\n",
-    "manual_matches = {\n",
-    "    'LGGGBM': [\n",
-    "        {'tumor': 'HCM-BROD-0457-C71-01B','model':'HCM-BROD-0457-C71-85A'},\n",
-    "        {'tumor': 'HCM-BROD-0796-C71-01B', 'model':'HCM-BROD-0796-C71-85A'},\n",
-    "        {'tumor': 'HCM-BROD-0457-C71-01A', 'model':'HCM-BROD-0457-C71-85A'},\n",
-    "        {'tumor': 'HCM-BROD-0796-C71-01B', 'model':'HCM-BROD-0796-C71-85A'},\n",
-    "    ],\n",
-    "    'COADREAD':[\n",
-    "        {'tumor':'HCM-WCMC-1344-C18-01A' ,'model':'HCM-WCMC-1344-C18-85A'},\n",
-    "        {'tumor': 'HCM-CSHL-0603-C18-06A', 'model':'HCM-CSHL-0603-C18-85M'},\n",
-    "        {'tumor': 'HCM-CSHL-0603-C18-06A', 'model':'HCM-CSHL-0603-C18-85A'},\n",
-    "        {'tumor':'HCM-CSHL-0603-C18-06A','model':'HCM-CSHL-0603-C18-85A'},\n",
-    "        {'tumor':'HCM-CSHL-1269-C18-06A','model':'HCM-CSHL-1269-C18-85M'},\n",
-    "        # added feb 2024\n",
-    "        {'tumor': 'HCM-CSHL-0064-C18-01A', 'model': 'HCM-CSHL-0064-C18-86A'},\n",
-    "        {'tumor': 'HCM-CSHL-0161-C18-01A', 'model': 'HCM-CSHL-0161-C18-85A'},\n",
-    "        {'tumor': 'HCM-CSHL-0162-C19-01A', 'model': 'HCM-CSHL-0162-C19-85A'},\n",
-    "        {'tumor': 'HCM-CSHL-0246-C19-01B', 'model': 'HCM-CSHL-0246-C19-86A'},\n",
-    "        {'tumor': 'HCM-CSHL-0603-C18-06A', 'model': 'HCM-CSHL-0603-C18-85M'},\n",
-    "        {'tumor': 'HCM-SANG-0270-C20-01A', 'model': 'HCM-SANG-0270-C20-86A'}\n",
-    "    ],\n",
-    "    'PAAD': [\n",
-    "        {'tumor':'HCM-CSHL-1264-C25-01A', 'model':'HCM-CSHL-1264-C25-85A'},        \n",
-    "    ],\n",
-    "    'SKCM': [\n",
-    "        {'tumor':'HCM-BROD-0444-C43-06A','model':'HCM-BROD-0444-C43-85M'},\n",
-    "        {'tumor':'HCM-BROD-0683-C43-06A','model':'HCM-BROD-0683-C43-85A'},\n",
-    "        {'tumor':'HCM-BROD-0715-C43-06A','model':'HCM-BROD-0715-C43-85B'},\n",
-    "        {'tumor':'HCM-BROD-1119-C43-06A','model':'HCM-BROD-1119-C43-85B'}\n",
-    "    ],\n",
-    "    'ESO': [\n",
-    "        {'tumor':'NA', 'model':'NA'},        \n",
-    "    ],\n",
-    "    'BRCA': [\n",
-    "        {'tumor':'HCM-CSHL-0153-C50-01B', 'model':'HCM-CSHL-0153-C50-85E'},        \n",
-    "    ],\n",
-    "    'BLCA': [\n",
-    "        {'tumor': 'HCM-CSHL-0802-C67-01A', 'model': 'HCM-CSHL-0802-C67-85B'},\n",
-    "        {'tumor': 'HCM-WCMC-0675-C67-02A', 'model': 'HCM-WCMC-0675-C67-85R'},\n",
-    "        {'tumor': 'HCM-WCMC-0948-C67-01A', 'model': 'HCM-WCMC-0948-C67-85A'},\n",
-    "        {'tumor': 'HCM-WCMC-0949-C67-01A', 'model': 'HCM-WCMC-0949-C67-85A'},\n",
-    "        {'tumor': 'HCM-WCMC-0950-C67-01A', 'model': 'HCM-WCMC-0950-C67-85A'},\n",
-    "        {'tumor': 'HCM-WCMC-0951-C67-01A', 'model': 'HCM-WCMC-0951-C67-85A'},\n",
-    "        {'tumor': 'HCM-WCMC-1284-C67-01B', 'model': 'HCM-WCMC-1284-C67-85A'},\n",
-    "        {'tumor': 'HCM-WCMC-1287-C67-01A', 'model': 'HCM-WCMC-1287-C67-85A'}        \n",
-    "    ],\n",
-    "    'OV': [\n",
-    "        {'tumor':'NA', 'model':'NA'},        \n",
-    "    ],\n",
-    "    'LUNG': [\n",
-    "        {'tumor':'HCM-CSHL-0058-C34-01B', 'model':'HCM-CSHL-0058-C34-86A'},        \n",
-    "    ],\n",
-    "    'KIRCKICH': [\n",
-    "        {'tumor':'NA', 'model':'HCM-BROD-0353-C64-85A'},        \n",
-    "        {'tumor':'NA', 'model':'HCM-BROD-0682-C64-85A'},        \n",
-    "    ],\n",
-    "    'SARC': [\n",
-    "        {'tumor':'HCM-BROD-0007-C49-06A','model':'HCM-BROD-0007-C49-85B'},\n",
-    "        {'tumor':'HCM-BROD-0035-C49-06A','model':'HCM-BROD-0035-C49-85M'},\n",
-    "        {'tumor':'HCM-BROD-0036-C41-06A','model':'HCM-BROD-0036-C41-85A'},\n",
-    "        {'tumor':'HCM-BROD-0052-C49-01A','model':'HCM-BROD-0052-C49-85A'},\n",
-    "        {'tumor':'HCM-BROD-0053-C49-06A','model':'HCM-BROD-0053-C49-85M'},\n",
-    "        {'tumor':'HCM-BROD-0234-C49-06A','model':'HCM-BROD-0234-C49-85M'},\n",
-    "        {'tumor':'HCM-BROD-0351-C49-06B','model':'HCM-BROD-0351-C49-85M'},\n",
-    "        {'tumor':'HCM-BROD-0649-C49-06A','model':'HCM-BROD-0649-C49-85B'},\n",
-    "        {'tumor':'HCM-BROD-0762-C49-01A','model':'HCM-BROD-0762-C49-85B'},\n",
-    "        {'tumor':'HCM-BROD-0871-C49-06B','model':'HCM-BROD-0871-C49-85M'},\n",
-    "        {'tumor':'HCM-BROD-1078-C49-06B','model':'HCM-BROD-1078-C49-85B'},\n",
-    "        {'tumor':'HCM-STAN-0840-C49-06A','model':'HCM-STAN-0840-C49-85A'},\n",
-    "     ],\n",
-    "    'UCEC': [\n",
-    "        {'tumor':'NA', 'model':'NA'},        \n",
-    "    ],\n",
-    "    'LIHCCHOL': [\n",
-    "        {'tumor':'HCM-CSHL-0174-C22-01A', 'model':'HCM-CSHL-0174-C22-85A'},        \n",
-    "        {'tumor':'HCM-CSHL-0174-C22-01A', 'model':'HCM-CSHL-0174-C22-86A'},        \n",
-    "    ],\n",
-    "}\n",
-    "\n",
-    "         \n",
-    "        \n",
     "# Add this if not already there or if already there then update the pairings\n",
     "for ipair in manual_matches[cancer]:\n",
     "    sample_tumor = ipair['tumor']\n",
@@ -469,9 +333,7 @@
     "        tumor2model.loc[len(tumor2model.index)] = [sample_tumor, sample_model]\n",
     "        \n",
     "    if sample_model not in list(tumor2model['Cancer Model Aliquot']):\n",
-    "        tumor2model.loc[len(tumor2model.index)] = [sample_tumor, sample_model] \n",
-    "    \n",
-    "    # todo update so handles for if the sample is there but the pairing is off"
+    "        tumor2model.loc[len(tumor2model.index)] = [sample_tumor, sample_model]"
    ]
   },
   {
@@ -553,7 +415,6 @@
     "for i in range(0, len(z_tumors_list)):\n",
     "    z_tum = z_tumors_list[i]\n",
     "    z_mod = z_models_list[i]\n",
-    "    #print(final_results['tumor'][i],('tumor', 'model'), (z_tum, z_mod))\n",
     "    if abs(z_tum) <= 3:\n",
     "        if abs(z_mod) <= 3:\n",
     "            similar.append('similarTumor:similarModel')\n",
@@ -566,40 +427,6 @@
     "            similar.append('dissimilarTumor:dissimilarModel')\n",
     "            \n",
     "final_results['similar']= similar\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc230f05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # sanity check. \n",
-    "# print('HCM-CSHL-0058-C34-01B' in list(final_results['model']))\n",
-    "# print('HCM-CSHL-0058-C34-01B' in list(final_results['tumor']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93cb3fe8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(final_results.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2b00f6a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "final_results"
    ]
   },
   {
@@ -619,32 +446,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "print(Counter(final_results['similar']))\n",
-    "\n",
     "# look at problematic samples\n",
     "problem_labels = ['similarTumor:dissimilarModel','dissimilarTumor:similarModel', 'dissimilarTumor:dissimilarModel']\n",
     "issues =final_results[final_results['similar'].isin(problem_labels)].reset_index(drop=True)\n",
-    "issues.to_csv('../data/distance_metric/main_results/outlier_samples_HCMITumor.Model_{}.tsv'.format(cancer), sep='\\t',index=False)\n",
-    "issues"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "983c9b51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('\\t', cancer)\n",
-    "\n",
-    "outliers_zscore = dict()\n",
-    "a = issues[['tumor', 'model', 'similar', 'z-score_to_tumors', 'z-score_to_model']]\n",
-    "outliers_zscore[cancer]=a\n",
-    "\n",
-    "outliers_zscore[cancer]\n",
-    "\n",
-    "print('TODO update so this is saved')"
+    "issues.to_csv('../data/distance_metric/main_results/outlier_samples_HCMITumor.Model_{}.tsv'.format(cancer), sep='\\t',index=False)"
    ]
   },
   {
