pull files to top

--- a/scripts/dist_model-tumor.ipynb
+++ b/scripts/dist_model-tumor.ipynb
@@ -22,6 +22,8 @@
     "#######\n",
     "cancer = 'PAAD'\n",
     "run = 'HCMITumorModel'\n",
+    "matches_file = '../src/distance_metric/HCMI_AWG_Model-Tumor-Normal_Linkage_v2.0_2.20.2024.txt'\n",
+    "ensure_matches_file = '../data/distance_metric/src/missing_ohsu_euclidean_distance_all.02.12.2024.csv'\n",
     "#######"
    ]
   },
@@ -222,8 +224,7 @@
     "### ex. What is the distance between PAAD_tumor_1 and the PAAD_model_1 ? ###\n",
     "\n",
     "# Create look up matches of model and cancer model\n",
-    "file = '../src/distance_metric/HCMI_AWG_Model-Tumor-Normal_Linkage_v2.0_2.20.2024.txt'\n",
-    "ref = pd.read_csv(file, sep='\\t')\n",
+    "ref = pd.read_csv(matches_file, sep='\\t')\n",
     "\n",
     "# note some tumors match to multiple models\n",
     "tumor2model = ref[['Matched Tumor Aliquot', 'Cancer Model Aliquot']]\n",
@@ -237,9 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tweak based on mushriqs missing file \n",
+    "# tweak based on missing file \n",
     "# add any pairs that are missing\n",
-    "mdf = pd.read_csv('../data/distance_metric/src/missing_ohsu_euclidean_distance_all.02.12.2024.csv', sep=',')\n",
+    "mdf = pd.read_csv(ensure_matches_file, sep=',')\n",
     "\n",
     "# Create abbrev to full cancer cohort dict\n",
     "with open('../src/full_cancers.json', 'r') as fh:\n",
